# gripus

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/glm/glm/gtx/: scalar_multiplication.hpp
dependencies/stb/: CMakeLists.txt  stb_image.h
dependencies/tinyxml/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
gripus-core/: .cproject  .project  CMakeLists.txt  Constants.cpp  Constants.h  Environment.cpp  Environment.h  ExternalForce.cpp  ExternalForce.h  ExternalForces.cpp  ExternalForces.h  IGravitation.cpp  IGravitation.h  IRestriction.cpp  IRestriction.h  IXmlSerializable.h  MassGravitation.cpp  MassGravitation.h  MemoryMesh.cpp  MemoryMesh.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Output.cpp  Output.h  PlanarGravitation.cpp  PlanarGravitation.h  PointGravitation.cpp  PointGravitation.h  Precision.cpp  Precision.h  Projection.cpp  Projection.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Simulation.cpp  Simulation.h  (+12 more)
gripus-simulator/: CMakeLists.txt  main.cpp
gripus-viewer/: CMakeLists.txt  RenderMesh.cpp  RenderMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramFond.h  Simulation.cpp  Simulation.h  Texture.cpp  Texture.h  TexturePool.cpp  TexturePool.h  main.cpp
gripus-viewer/objects/blueball/: blueball.blend  blueball.mtl
gripus-viewer/objects/moon/: moon.mtl
gripus-viewer/objects/redball/: redball.blend  redball.mtl
gripus-viewer/shaders/: color_fragment.shader  fragment.shader  vertex.shader
testing/: example.xml  output.xml  simulation (copy).xml  simulation.xml  simulation1.xml  simulation2.xml
testing/simulation2/: a.out  analyser.cpp  in.xml  points  points.cpp  points.xml
